webapi-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bcff-ingress
  namespace: dev
spec:
  rules:
    - host: dev.bcff.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-bcff
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bcff-ingress
  namespace: prod
spec:
    rules:
    - host: prod.bcff.io
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: api-bcff
                  port:
                    number: 8080
